--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,8 @@
     <string name="poses_by_family">Poses by Family</string>
     <string name="_3_5_rounds">3–5 Rounds</string>
     <string name="surya_namaskar_a">Surya Namaskar A</string>
+    <string name="start_teaching">Start Teaching</string>
+    <string name="finish_class">Finish Class</string>
     <string-array name="class_levels">
         <item>Beginners</item>
         <item>Intermediate</item>
