--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,6 +123,7 @@
     <string name="notes">Notes</string>
     <string name="_2_minutes">2 Minutes</string>
     <string name="forward_bends">Forward Bends</string>
+    <string name="log_out">Log Out</string>
     <string-array name="class_levels">
         <item>Beginners</item>
         <item>Intermediate</item>
