update button text for defining new flow and add corresponding string resource

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,6 +127,7 @@
     <string name="begginers">Beginners</string>
     <string name="add_flow">Add Flow</string>
     <string name="Flows">Flows</string>
+    <string name="define_new_flow">Define New Flow</string>
     <string-array name="class_levels">
         <item>Beginners</item>
         <item>Intermediate</item>
