--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,6 +139,9 @@
     <string name="seated_poses">Seated Poses</string>
     <string name="boat_poses">Boat Poses</string>
     <string name="balancing_poses">Balancing Poses</string>
+    <string name="__repetitions">/ Repetitions</string>
+    <string name="start_on_all_fours_tuck_your_toes">Start on all fours, tuck your toes…</string>
+    <string name="keep_feet_hip_width_apart">Keep feet hip-width apart…</string>
     <string-array name="class_levels">
         <item>Beginners</item>
         <item>Intermediate</item>
