--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,7 +144,8 @@
     <string name="keep_feet_hip_width_apart">Keep feet hip-width apart…</string>
     <string name="discard_changes_title">Discard changes?</string>
     <string name="discard_changes_message">Your changes won’t be saved. Continue?</string>
-    <string name="image_is_uploading_should_take_a_few_seconds">Image is uploading, should take a few seconds...</string>
+    <string name="image_is_uploading_should_take_a_few_seconds">Image is uploading, should take a few seconds…</string>
+    <string name="changing_password_please_wait">Changing password, please wait…</string>
     <string-array name="class_levels">
         <item>Beginner</item>
         <item>Intermediate</item>
