change app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">25B-11345B-Yogis</string>
+    <string name="app_name">Yogis</string>
     <string name="welcome_to">Welcome to</string>
     <string name="yogis">YOGIS</string>
     <string name="yoga_instructors_helper">Yoga Instructors Helper</string>
